# End-to-end-data-analysis

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/interim/: README.md
data/processed/: README.md
data/raw/: README.md
notebooks/: 01_sql_exploration.ipynb  02_cleaning_analysis.ipynb  03_statistics.ipynb  04_ml_modeling.ipynb  05_bi_dashboard.ipynb
src/data/: etl_postgres.py  query.py
src/utils/: math_ops.py
tests/: conftest.py
tests/test_data/: test_etl_postgres.py
tests/test_src/: test_utils.py
